Refactor LEQUAL GitHub page & correct mistakes

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: LEQUAL
+description: CNES Software Quality Expertise Laboratory
 theme: jekyll-theme-slate
+github:
+  repository_url: https://github.com/lequal/
