--- a/.github/workflows/generate_stats.yml
+++ b/.github/workflows/generate_stats.yml
@@ -15,11 +15,10 @@ jobs:
     runs-on: ubuntu-22.04
     name: Stats for cnes report
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13' 
