--- a/.github/workflows/generate_stats.yml
+++ b/.github/workflows/generate_stats.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.head_ref }}
+          ref: dl_stats
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13' 
